--- a/medrecords/templates/pages/home.html
+++ b/medrecords/templates/pages/home.html
@@ -1,1 +1,208 @@
 {% extends "base.html" %}
+{% load static i18n %}
+{% block content %}
+
+{% if request.user.is_authenticated %}
+<div class="container-scroller">
+    <!-- partial:partials/_navbar.html -->
+    <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
+      <div class="text-center navbar-brand-wrapper">
+        <a class="navbar-brand brand-logo" href="index.html"><img src="{% static 'images/medrecords.png' %}" alt="logo"></a>
+        <a class="navbar-brand brand-logo-mini" href="index.html"><img src="images/logo_mini.svg" alt="logo"></a>
+      </div>
+      <div class="navbar-menu-wrapper d-flex align-items-center">
+        <p class="page-name d-none d-lg-block">Bienvenido, {{request.user.email}}</p>
+        <ul class="navbar-nav ml-lg-auto">
+          <!-- <li class="nav-item d-none d-sm-block profile-img">
+            <a class="nav-link profile-image" href="#">
+              <img src="images/faces/face4.jpg" alt="profile-img">
+              <span class="online-status online bg-success"></span>
+            </a>
+          </li> -->
+        </ul>
+        <!-- <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center ml-auto" type="button" data-toggle="offcanvas">
+          <span class="icon-menu icons"></span>
+        </button> -->
+      </div>
+    </nav>
+    <!-- partial -->
+    <div class="container-fluid page-body-wrapper">
+      <div class="row row-offcanvas row-offcanvas-right">
+        <!-- partial:partials/_sidebar.html -->
+        <nav class="sidebar sidebar-offcanvas" id="sidebar">
+          <ul class="nav">
+            <li class="nav-item nav-category">
+              <span class="nav-link">GENERAL</span>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">
+                <span class="menu-title">Dashboard</span>
+                <i class="icon-speedometer menu-icon"></i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/widgets.html">
+                <span class="menu-title">Fichas medicas</span>
+                <i class="icon-wrench menu-icon"></i>
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <!-- partial -->
+        <div class="content-wrapper">
+          <!-- ROW ENDS -->
+          <div class="row">
+            <div class="col-lg-12 grid-margin">
+              <div class="card performance-cards">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col d-flex flex-row justify-content-center align-items-center">
+                      <div class="wrapper icon-circle bg-success">
+                        <i class="icon-rocket icons"></i>
+                      </div>
+                      <div class="wrapper text-wrapper">
+                        <p class="text-dark">8954</p>
+                        <p>Usuarios</p>
+                      </div>
+                    </div>
+                    <div class="col d-flex flex-row justify-content-center align-items-center">
+                      <div class="wrapper icon-circle bg-warning">
+                        <i class="icon-umbrella icons"></i>
+                      </div>
+                      <div class="wrapper text-wrapper">
+                        <p class="text-dark">6521</p>
+                        <p>Pacientes</p>
+                      </div>
+                    </div>
+                    <div class="col d-flex flex-row justify-content-center align-items-center">
+                      <div class="wrapper icon-circle bg-primary">
+                        <i class="icon-check icons"></i>
+                      </div>
+                      <div class="wrapper text-wrapper">
+                        <p class="text-dark">325</p>
+                        <p>Medicos</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- ROW ENDS -->
+          <!-- ROW ENDS -->
+          <div class="row">
+            <div class="col-lg-12 grid-margin">
+              <div class="card">
+                <div class="card-body">
+                  <h2 class="card-title">Usuarios</h2>
+                  <div class="table-responsive">
+                    <table class="table table-striped">
+                      <thead>
+                        <tr>
+                          <th>Name</th>
+                          <th>Position</th>
+                          <th>Office</th>
+                          <th>Age</th>
+                          <th>Start Date</th>
+                          <th>Assign</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>Airi Satou</td>
+                          <td>Accountant</td>
+                          <td>Tokyo</td>
+                          <td>55</td>
+                          <td>2009/10/09</td>
+                          <td>$162,700</td>
+                        </tr>
+                        <tr>
+                          <td>Angelica Ramos</td>
+                          <td>Chief Executive Officer (CEO)</td>
+                          <td>London</td>
+                          <td>30</td>
+                          <td>2009/10/09</td>
+                          <td>$190,500</td>
+                        </tr>
+                        <tr>
+                          <td>Ashton Cox</td>
+                          <td>Regional Director</td>
+                          <td>San Francisco</td>
+                          <td>36</td>
+                          <td>2004/12/02</td>
+                          <td>$62,700</td>
+                        </tr>
+                        <tr>
+                          <td>Angelica Ramos</td>
+                          <td>Chief Executive Officer (CEO)</td>
+                          <td>London</td>
+                          <td>30</td>
+                          <td>2011/07/25</td>
+                          <td>$190,500</td>
+                        </tr>
+                        <tr>
+                          <td>Ashton Cox</td>
+                          <td>Regional Director</td>
+                          <td>San Francisco</td>
+                          <td>32</td>
+                          <td>2004/12/02</td>
+                          <td>$62,700</td>
+                        </tr>
+                        <tr>
+                          <td>Angelica Ramos</td>
+                          <td>Chief Executive Officer (CEO)</td>
+                          <td>London</td>
+                          <td>31</td>
+                          <td>2011/07/25</td>
+                          <td>$190,500</td>
+                        </tr>
+                        <tr>
+                          <td>Ashton Cox</td>
+                          <td>Regional Director</td>
+                          <td>Tokyo</td>
+                          <td>39</td>
+                          <td>2004/12/02</td>
+                          <td>$62,700</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  <div class="d-flex align-items-center justify-content-between flex-wrap">
+                    <p class="mb-0">Showing 1 to 10 of 57 entries</p>
+                    <nav>
+                      <ul class="pagination rounded-separated pagination-info mt-3">
+                        <li class="page-item"><a class="page-link" href="#"><i class="mdi mdi-chevron-left"></i></a></li>
+                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link" href="#">4</a></li>
+                        <li class="page-item"><a class="page-link" href="#"><i class="mdi mdi-chevron-right"></i></a></li>
+                      </ul>
+                    </nav>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- ROW ENDS -->
+        </div>
+        <!-- content-wrapper ends -->
+        <!-- partial:partials/_footer.html -->
+        <footer class="footer">
+          <div class="container-fluid clearfix">
+            <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2018 <a href="http://www.bootstrapdash.com/" target="_blank">Bootstrapdash</a>. All rights reserved.</span>
+            <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Hand-crafted & made with <i class="mdi mdi-heart text-danger"></i></span>
+          </div>
+        </footer>
+        <!-- partial -->
+      </div>
+      <!-- row-offcanvas ends -->
+    </div>
+    <!-- page-body-wrapper ends -->
+  </div>
+  <!-- container-scroller -->
+{% else %}
+<p>Sistema para la administración de fichas medicas.</p>
+{% endif %}
+
+{% endblock content %}
