--- a/medrecords/templates/pages/home.html
+++ b/medrecords/templates/pages/home.html
@@ -61,7 +61,7 @@
                         <i class="icon-rocket icons"></i>
                       </div>
                       <div class="wrapper text-wrapper">
-                        <p class="text-dark">8954</p>
+                        <p class="text-dark">{{users_count}}</p>
                         <p>Usuarios</p>
                       </div>
                     </div>
@@ -99,84 +99,38 @@
                     <table class="table table-striped">
                       <thead>
                         <tr>
-                          <th>Name</th>
-                          <th>Position</th>
-                          <th>Office</th>
-                          <th>Age</th>
-                          <th>Start Date</th>
-                          <th>Assign</th>
+                          <th>Email</th>
+                          <th>username</th>
                         </tr>
                       </thead>
                       <tbody>
+                        {% for user in object_list %}
                         <tr>
-                          <td>Airi Satou</td>
-                          <td>Accountant</td>
-                          <td>Tokyo</td>
-                          <td>55</td>
-                          <td>2009/10/09</td>
-                          <td>$162,700</td>
-                        </tr>
-                        <tr>
-                          <td>Angelica Ramos</td>
-                          <td>Chief Executive Officer (CEO)</td>
-                          <td>London</td>
-                          <td>30</td>
-                          <td>2009/10/09</td>
-                          <td>$190,500</td>
-                        </tr>
-                        <tr>
-                          <td>Ashton Cox</td>
-                          <td>Regional Director</td>
-                          <td>San Francisco</td>
-                          <td>36</td>
-                          <td>2004/12/02</td>
-                          <td>$62,700</td>
-                        </tr>
-                        <tr>
-                          <td>Angelica Ramos</td>
-                          <td>Chief Executive Officer (CEO)</td>
-                          <td>London</td>
-                          <td>30</td>
-                          <td>2011/07/25</td>
-                          <td>$190,500</td>
-                        </tr>
-                        <tr>
-                          <td>Ashton Cox</td>
-                          <td>Regional Director</td>
-                          <td>San Francisco</td>
-                          <td>32</td>
-                          <td>2004/12/02</td>
-                          <td>$62,700</td>
-                        </tr>
-                        <tr>
-                          <td>Angelica Ramos</td>
-                          <td>Chief Executive Officer (CEO)</td>
-                          <td>London</td>
-                          <td>31</td>
-                          <td>2011/07/25</td>
-                          <td>$190,500</td>
-                        </tr>
-                        <tr>
-                          <td>Ashton Cox</td>
-                          <td>Regional Director</td>
-                          <td>Tokyo</td>
-                          <td>39</td>
-                          <td>2004/12/02</td>
-                          <td>$62,700</td>
-                        </tr>
+
+                            <td>{{ user.email }} </td>
+                            <td>{{ user.username }} </td>
+                        {% empty %}
+                            <li>No users yet.</li>
+                          </tr>
+
+                        {% endfor %}
                       </tbody>
                     </table>
                   </div>
                   <div class="d-flex align-items-center justify-content-between flex-wrap">
-                    <p class="mb-0">Showing 1 to 10 of 57 entries</p>
+                    <p class="mb-0"></p>
                     <nav>
                       <ul class="pagination rounded-separated pagination-info mt-3">
-                        <li class="page-item"><a class="page-link" href="#"><i class="mdi mdi-chevron-left"></i></a></li>
-                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item"><a class="page-link" href="#">4</a></li>
-                        <li class="page-item"><a class="page-link" href="#"><i class="mdi mdi-chevron-right"></i></a></li>
+                         {% if page_obj.has_previous %}
+                        <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}"><i class="mdi mdi-chevron-left"></i></a></li>
+                        {% endif %}
+
+                        <li class="page-item active"><a class="page-link" href="#"> Pagina {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}.
+                          </a></li>
+
+                        {% if page_obj.has_next %}
+                        <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}"><i class="mdi mdi-chevron-right"></i></a></li>
+                        {% endif %}
                       </ul>
                     </nav>
                   </div>
