--- a/medrecords/templates/base.html
+++ b/medrecords/templates/base.html
@@ -73,17 +73,48 @@
 
     </div>
 
-    <div class="container">
+    <div class="container-scroller">
 
       {% if messages %}
           {% for message in messages %}
               <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}</div>
           {% endfor %}
       {% endif %}
-
+      <div class="container-fluid page-body-wrapper">
+          <div class="row row-offcanvas row-offcanvas-right">
+            <!-- partial:partials/_sidebar.html -->
+            <nav class="sidebar sidebar-offcanvas" id="sidebar">
+              <ul class="nav">
+                <li class="nav-item nav-category">
+                  <span class="nav-link">GENERAL</span>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'home' %}">
+                        <span class="menu-title">Dashboard</span>
+                    <i class="icon-speedometer menu-icon"></i>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'medrecords:medical_record' %}">
+                    <span class="menu-title">Fichas medicas</span>
+                    <i class="icon-wrench menu-icon"></i>
+                  </a>
+                </li>
+              </ul>
+            </nav>
       {% block content %}
 
       {% endblock content %}
+
+        </div>
+        <!-- row-offcanvas ends -->
+      </div>
+      <footer class="footer">
+          <div class="container-fluid clearfix">
+            <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2018 <a href="http://www.bootstrapdash.com/" target="_blank">Bootstrapdash</a>. All rights reserved.</span>
+            <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Hand-crafted & made with <i class="mdi mdi-heart text-danger"></i></span>
+          </div>
+        </footer>
 
     </div> <!-- /container -->
 
