--- a/medrecords/templates/pages/medicalrecord_update_form.html
+++ b/medrecords/templates/pages/medicalrecord_update_form.html
@@ -10,15 +10,10 @@
               <div class="col-12">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Ficha Medica</h4>
-                    <p class="card-description">
-                      Basic form layout
-                    </p>
-                    <form class="forms-sample" method="POST">
-                        {% csrf_token %}
-                      {{form}}
-                      <input type="submit" class="btn btn-success mr-2">Submit</button>
-                      <button class="btn btn-light">Cancel</button>
+                    <h4 class="card-title">Editar Ficha Medica</h4>
+                    <form method="post">{% csrf_token %}
+                        {{ form.as_p }}
+                        <input type="submit" value="Update" />
                     </form>
                   </div>
                 </div>
