--- a/medrecords/templates/account/base.html
+++ b/medrecords/templates/account/base.html
@@ -2,8 +2,9 @@
 {% block title %}{% block head_title %}{% endblock head_title %}{% endblock title %}
 
 {% block content %}
-<div class="row">
-  <div class="col-md-6 offset-md-3">
+<div class="content-wrapper">
+    <!-- ROW ENDS -->
+    <div class="row">
     {% block inner %}{% endblock %}
   </div>
 </div>
