--- a/medrecords/templates/account/login.html
+++ b/medrecords/templates/account/login.html
@@ -7,8 +7,9 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block inner %}
+    <div class="col-lg-12 grid-margin">
 
-<h1>{% trans "Sign In" %}</h1>
+<h1>Login </h1>
 
 {% get_providers as socialaccount_providers %}
 
@@ -43,6 +44,5 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
   <button class="primaryAction btn btn-primary" type="submit">{% trans "Sign In" %}</button>
 </form>
-
 {% endblock %}
 
