--- a/medrecords/templates/account/logout.html
+++ b/medrecords/templates/account/logout.html
@@ -2,21 +2,27 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Sign Out" %}{% endblock %}
+{% block head_title %}Cerrar sesión{% endblock %}
 
 {% block inner %}
-<h1>{% trans "Sign Out" %}</h1>
+<div class="content-wrapper">
+    <!-- ROW ENDS -->
+    <div class="row">
+      <div class="col-lg-12 grid-margin">
+<h1>Cerrar sesión</h1>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+<p>Estas seguro que quieres cerrar sesión?</p>
 
 <form method="post" action="{% url 'account_logout' %}">
   {% csrf_token %}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button class="btn btn-danger" type="submit">{% trans 'Sign Out' %}</button>
+  <button class="btn btn-danger" type="submit">Cerrar sesión</button>
 </form>
-
+</div>
+</div>
+</div>
 
 {% endblock %}
 
