--- a/medrecords/templates/base.html
+++ b/medrecords/templates/base.html
@@ -19,7 +19,7 @@
 
     <!-- Latest compiled and minified Bootstrap 4.1.1 CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-
+    <link href="//cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css" rel="stylesheet">
 
     <!-- Your stuff: Third-party CSS libraries go here -->
 
@@ -51,11 +51,11 @@
             {% if request.user.is_authenticated %}
               <li class="nav-item">
                 {# URL provided by django-allauth/account/urls.py #}
-                <a class="nav-link" href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a>
+                <a class="nav-link" href="{% url 'users:detail' request.user.username  %}">Mi perfil</a>
               </li>
               <li class="nav-item">
                 {# URL provided by django-allauth/account/urls.py #}
-                <a class="nav-link" href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a>
+                <a class="nav-link" href="{% url 'account_logout' %}">Cerrar sesion</a>
               </li>
             {% else %}
               <!-- <li class="nav-item">
@@ -73,6 +73,7 @@
 
     </div>
 
+    {% if request.user.is_authenticated %}
     <div class="container-scroller">
 
       {% if messages %}
@@ -102,6 +103,8 @@
                 </li>
               </ul>
             </nav>
+      {% endif %}
+
       {% block content %}
 
       {% endblock content %}
