--- a/medrecords/templates/pages/medicalrecord_update_form.html
+++ b/medrecords/templates/pages/medicalrecord_update_form.html
@@ -11,9 +11,10 @@
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">Editar Ficha Medica</h4>
-                    <form method="post">{% csrf_token %}
-                        {{ form.as_p }}
-                        <input type="submit" value="Update" />
+                    <form class="forms-sample" method="post">{% csrf_token %}
+                        {{ form }}
+                        <input type="submit" class="btn btn-success mr-2" value="Actualizar" />
+                        <a  href="{% url 'medrecords:medical_record' %}" class="btn btn-light">Cancel</a>
                     </form>
                   </div>
                 </div>
