--- a/medrecords/templates/users/user_detail.html
+++ b/medrecords/templates/users/user_detail.html
@@ -4,25 +4,24 @@
 {% block title %}User: {{ object.username }}{% endblock %}
 
 {% block content %}
-<div class="container">
 
-  <div class="row">
-    <div class="col-sm-12">
+    <div class="content-wrapper">
+        <div class="row">
+            <div class="col-lg-12 grid-margin">
 
       <h2>{{ object.username }}</h2>
       {% if object.name %}
         <p>{{ object.name }}</p>
       {% endif %}
-    </div>
-  </div>
+
 
 {% if object == request.user %}
 <!-- Action buttons -->
 <div class="row">
 
   <div class="col-sm-12">
-    <a class="btn btn-primary" href="{% url 'users:update' %}" role="button">My Info</a>
-    <a class="btn btn-primary" href="{% url 'account_email' %}" role="button">E-Mail</a>
+    <a class="btn btn-primary" href="{% url 'users:update' %}" role="button">Editar Perfil</a>
+    <!-- <a class="btn btn-primary" href="{% url 'account_email' %}" role="button">E-Mail</a> -->
     <!-- Your Stuff: Custom user template urls -->
   </div>
 
@@ -30,7 +29,8 @@
 <!-- End Action buttons -->
 {% endif %}
 
-
+</div>
+</div>
 </div>
 {% endblock content %}
 
