--- a/medrecords/templates/users/user_form.html
+++ b/medrecords/templates/users/user_form.html
@@ -4,6 +4,9 @@
 {% block title %}{{ user.username }}{% endblock %}
 
 {% block content %}
+<div class="content-wrapper">
+    <!-- ROW ENDS -->
+    <div class="row">
   <h1>{{ user.username }}</h1>
   <form class="form-horizontal" method="post" action="{% url 'users:update' %}">
     {% csrf_token %}
@@ -14,4 +17,6 @@
       </div>
     </div>
   </form>
+</div>
+</div>
 {% endblock %}
