--- a/medrecords/templates/pages/medical_records.html
+++ b/medrecords/templates/pages/medical_records.html
@@ -4,6 +4,7 @@
 {% block content %}
 <div class="content-wrapper">
   <!-- ROW ENDS -->
+  {% if request.user.user_type == '1' %}
   <div class="row">
     <div class="col-lg-12 grid-margin">
       <div class="card performance-cards">
@@ -41,6 +42,7 @@
       </div>
     </div>
   </div>
+  {% endif %}
   <!-- ROW ENDS -->
   <!-- ROW ENDS -->
   <div class="row">
@@ -68,6 +70,30 @@
                         <button type="button" class="btn btn-success">
                           <i class="mdi mdi-tooltip-edit"></i>Editar</button>
                       </a>
+                      <!-- Ver ficha -->
+                      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#viewrecord">
+                        Ver Ficha</button>
+                        <div class="modal fade" id="viewrecord" tabindex="-1" role="dialog" aria-labelledby="viewrecordLabel" aria-hidden="true">
+                          <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <div class="modal-body">
+                                  <h5>Ficha medica: {{ record.patient.first_name }}</h5>
+                                  <p>Paciente :{{ record.patient }}</p>
+                                  <p>Altura: {{ record.height }}</p>
+                                  <p>Peso: {{ record.weight }}</p>
+                                  <p>Observationes: {{ record.observations }}</p>
+                                  <!-- <p>examenes:<br/>{% for exam in record.exam.all %}{{ exam }}<br/>{% endfor %}</p>
+                                  <p>medicinas: {{ record.medicine }}</p> -->
+                                </div>
+                              </div>
+
+                              <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
                       <!-- Button trigger modal -->
                       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#deleterecord">
                           Eliminar
@@ -103,16 +129,15 @@
               </table>
             </div>
             <div class="d-flex align-items-center justify-content-between flex-wrap">
+                {% if request.user.type_user == 1 %}
               <a class="btn btn-primary"  href="{% url 'medrecords:medrecord_form' %}" role="button">Agregar Ficha</a>
-
+              {% endif %}
               <nav>
                 <ul class="pagination rounded-separated pagination-info mt-3">
                   {% if page_obj.has_previous %}
                   <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}"><i class="mdi mdi-chevron-left"></i></a></li>
                   {% endif %}
-
                   <li class="page-item active"><a class="page-link" href="#"> Pagina {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}</a></li>
-
                   {% if page_obj.has_next %}
                   <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}"><i class="mdi mdi-chevron-right"></i></a></li>
                   {% endif %}
