--- a/medrecords/templates/base.html
+++ b/medrecords/templates/base.html
@@ -38,12 +38,24 @@
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+        {% if request.user.user_type == '1' %}
+
         <a class="navbar-brand" href="{% url 'home' %}">medrecords</a>
+        {% else %}
+        <a class="navbar-brand" href="{% url 'medrecords:medical_record' %}">medrecords</a>
+        {% endif %}
+
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+                {% if request.user.user_type == '1' %}
+
+                <a class="nav-link" href="{% url 'home' %}">Home </a>
+                {% else %}
+                <a class="nav-link" href="{% url 'medrecords:medical_record' %}">Home </a>
+
+                {% endif %}
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="{% url 'about' %}">About</a>
