--- a/medrecords/templates/pages/medical_record_form.html
+++ b/medrecords/templates/pages/medical_record_form.html
@@ -11,14 +11,12 @@
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title">Ficha Medica</h4>
-                    <p class="card-description">
-                      Basic form layout
-                    </p>
+
                     <form class="forms-sample" method="POST">
                         {% csrf_token %}
                       {{form}}
-                      <input type="submit" class="btn btn-success mr-2">Submit</button>
-                      <button class="btn btn-light">Cancel</button>
+                      <input type="submit" class="btn btn-success mr-2"></button>
+                      <a  href="{% url 'medrecords:medical_record' %}" class="btn btn-light">Cancel</a>
                     </form>
                   </div>
                 </div>
